--- a/index.html
+++ b/index.html
@@ -1,237 +1,195 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GOS - Governance of Cyber Systems</title>
-    <link href="https://fonts.googleapis.com/css?family=Orbitron:700|Montserrat:400,600&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-bg: #0b1225;
-            --glass-bg: rgba(21, 32, 57, 0.82);
-            --accent: #57d6ff;
-            --cyber: #0ff8e1;
-            --text: #eaf1fa;
-            --highlight: #334475;
-            --neon-shadow: 0 0 16px #57d6ff, 0 0 8px #232e46;
-        }
-
-        body {
-            margin: 0;
-            font-family: 'Montserrat', Arial, sans-serif;
-            background: linear-gradient(135deg, #0b1225 0%, #182142 100%);
-            color: var(--text);
-        }
-
-        .container {
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 36px 18px 80px 18px;
-        }
-
-        header {
-            position: relative;
-            background: var(--glass-bg);
-            border-radius: 0 0 22px 22px;
-            box-shadow: 0 4px 32px rgba(0,0,0,0.13);
-            padding: 44px 0 20px 0;
-            text-align: center;
-        }
-
-        .logo-cybercrow {
-            width: 170px;
-            margin-bottom: -35px;
-        }
-
-        .gos-title {
-            font-family: 'Orbitron', Arial, sans-serif;
-            font-size: 3.1rem;
-            font-weight: 700;
-            letter-spacing: 3px;
-            color: var(--accent);
-            text-shadow: var(--neon-shadow);
-            display: inline-block;
-            margin-top: 8px;
-            position: relative;
-            z-index: 1;
-        }
-
-        nav {
-            margin: 25px 0 0 0;
-        }
-
-        nav a {
-            color: var(--cyber);
-            text-decoration: none;
-            margin: 0 16px;
-            font-weight: 600;
-            font-size: 1.05rem;
-            padding-bottom: 3px;
-            border-bottom: 2px solid transparent;
-            transition: color .2s, border .2s;
-        }
-
-        nav a:hover {
-            color: #fff;
-            border-bottom: 2px solid var(--accent);
-        }
-
-        main {
-            margin-top: 30px;
-        }
-
-        .glass {
-            background: var(--glass-bg);
-            border-radius: 22px;
-            box-shadow: 0 4px 36px rgba(21,32,57,0.16);
-            padding: 38px 36px;
-            margin-bottom: 40px;
-            position: relative;
-            overflow: hidden;
-            transition: box-shadow .22s;
-        }
-        .glass:hover {
-            box-shadow: 0 6px 52px var(--accent);
-        }
-
-        h1, h2, h3 {
-            font-family: 'Orbitron', Arial, sans-serif;
-            color: var(--accent);
-        }
-        h1 {
-            font-size: 2.1rem;
-        }
-        h2 {
-            font-size: 1.25rem;
-            margin-top: 1.4em;
-            margin-bottom: 0.6em;
-        }
-        h3 {
-            font-size: 1.13rem;
-            color: var(--cyber);
-        }
-
-        .cta {
-            display: inline-block;
-            margin-top: 28px;
-            padding: 16px 38px;
-            font-size: 1.08rem;
-            background: var(--accent);
-            color: #0b1225;
-            border-radius: 16px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            box-shadow: 0 0 12px #34e4ff55;
-            text-decoration: none;
-            transition: background .2s, color .2s;
-        }
-        .cta:hover {
-            background: var(--cyber);
-            color: #142340;
-        }
-        ul {
-            list-style: disc inside;
-            padding-left: 10px;
-        }
-        footer {
-            margin-top: 36px;
-            text-align: center;
-            padding: 28px 0 15px 0;
-            font-size: 1.02rem;
-            color: #90bdd7;
-            background: linear-gradient(90deg, #0b1225 60%, #182142 100%);
-            border-radius: 18px 18px 0 0;
-            box-shadow: 0 -2px 18px #101933a0;
-        }
-
-        @media (max-width: 720px) {
-            .container {padding: 18px 0 60px 0;}
-            .glass {padding: 20px 10px;}
-            .gos-title {font-size: 2rem;}
-            .logo-cybercrow {width: 110px;}
-        }
-
-        /* Neon effect for cybercrow SVG */
-        .neon-glow {
-            filter: drop-shadow(0 0 12px #57d6ff) drop-shadow(0 0 8px #1a6380);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GOS - Governance of Cyber Systems</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg1: #101828;
+      --bg2: #182642;
+      --accent: #40b0f7;
+      --text: #eaf1fa;
+      --glass: rgba(30, 47, 91, 0.85);
+      --card-shadow: 0 4px 32px rgba(0,0,0,0.15);
+    }
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, var(--bg1), var(--bg2));
+      color: var(--text);
+      font-family: 'Montserrat', Arial, sans-serif;
+    }
+    header {
+      background: var(--bg2);
+      text-align: center;
+      padding: 60px 12px 32px 12px;
+      position: relative;
+      overflow: hidden;
+    }
+    .cybercrow-logo {
+      display: block;
+      margin: 0 auto -28px auto;
+      width: 140px;
+      /* Exemplo SVG minimalista, troque depois pelo SVG do seu corvo */
+    }
+    .gos-title {
+      font-family: 'Orbitron', Arial, sans-serif;
+      font-size: 2.8rem;
+      color: var(--accent);
+      letter-spacing: 3px;
+      font-weight: 700;
+      text-shadow: 0 2px 20px #34c7ff44;
+    }
+    nav {
+      margin-top: 20px;
+    }
+    nav a {
+      color: var(--accent);
+      text-decoration: none;
+      margin: 0 18px;
+      font-weight: 700;
+      font-size: 1.08rem;
+      letter-spacing: 1px;
+      padding-bottom: 2px;
+      border-bottom: 2px solid transparent;
+      transition: border .2s, color .2s;
+    }
+    nav a:hover {
+      border-bottom: 2px solid var(--accent);
+      color: #fff;
+    }
+    .section {
+      max-width: 900px;
+      margin: 54px auto;
+      padding: 38px 24px;
+      background: var(--glass);
+      border-radius: 22px;
+      box-shadow: var(--card-shadow);
+      text-align: center;
+    }
+    .section h2 {
+      color: var(--accent);
+      font-family: 'Orbitron', Arial, sans-serif;
+      font-size: 1.5rem;
+      margin-bottom: 18px;
+      letter-spacing: 1px;
+    }
+    .section p, .section ul {
+      font-size: 1.07rem;
+      margin: 12px 0 0 0;
+      line-height: 1.7;
+      color: #eaf1fa;
+    }
+    .section ul {
+      text-align: left;
+      display: inline-block;
+      margin: 24px auto 0 auto;
+      padding-left: 18px;
+    }
+    .cta {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 15px 40px;
+      font-size: 1.07rem;
+      background: var(--accent);
+      color: var(--bg1);
+      border-radius: 14px;
+      font-weight: bold;
+      text-decoration: none;
+      letter-spacing: 1px;
+      box-shadow: 0 2px 12px #0af2fd28;
+      transition: background .22s, color .22s;
+    }
+    .cta:hover {
+      background: #fff;
+      color: var(--accent);
+    }
+    footer {
+      margin-top: 46px;
+      text-align: center;
+      padding: 28px 0 10px 0;
+      font-size: 1.02rem;
+      color: #8ebee7;
+      background: var(--bg2);
+      border-radius: 16px 16px 0 0;
+      box-shadow: 0 -2px 18px #1e2f5bb0;
+    }
+    @media (max-width: 700px) {
+      .section {padding: 20px 6vw;}
+      .gos-title {font-size: 1.7rem;}
+      header {padding: 40px 2vw 22px 2vw;}
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <!-- Corvo cibernético pousado no letreiro GOS -->
-        <svg class="logo-cybercrow neon-glow" viewBox="0 0 110 100">
-            <!-- GOS Letreiro -->
-            <text x="16" y="92" font-family="Orbitron, Arial, sans-serif" font-size="40" font-weight="bold" fill="#57d6ff" textLength="78">GOS</text>
-            <!-- Corvo estilizado pousado -->
-            <g>
-                <ellipse cx="54" cy="38" rx="18" ry="10" fill="#111f2b" stroke="#57d6ff" stroke-width="1.5"/>
-                <ellipse cx="44" cy="26" rx="8" ry="13" fill="#232d46" stroke="#57d6ff" stroke-width="1"/>
-                <ellipse cx="49" cy="22" rx="4.2" ry="6" fill="#203042"/>
-                <ellipse cx="52" cy="30" rx="4" ry="4" fill="#1bd7f5" />
-                <rect x="58" y="36" width="16" height="4.5" rx="2.3" fill="#253449" stroke="#57d6ff" stroke-width="1"/>
-                <ellipse cx="41" cy="13" rx="2.5" ry="2" fill="#a3eaff"/>
-                <ellipse cx="42" cy="14.5" rx="0.7" ry="0.7" fill="#222"/>
-                <!-- Bico -->
-                <polygon points="33,19 39,19 36,23" fill="#b5fcff" stroke="#57d6ff" stroke-width="0.3"/>
-            </g>
-        </svg>
-        <div class="gos-title">Governance of Cyber Systems</div>
-        <nav>
-            <a href="#cyber">Cibersegurança</a>
-            <a href="#threat">Threat Intelligence</a>
-            <a href="#services">Serviços</a>
-            <a href="#contact">Contato</a>
-        </nav>
-    </header>
-    <div class="container">
-        <main>
-            <section class="glass">
-                <h1>Bem-vindo à GOS</h1>
-                <h3>Governance of Cyber Systems</h3>
-                <p>
-                    Inovação, confiança e inteligência em cibersegurança. Seu futuro digital protegido por quem entende o presente e antecipa o amanhã.
-                </p>
-            </section>
-            <section id="cyber" class="glass">
-                <h2>O Valor da Cibersegurança</h2>
-                <p>
-                    Cibersegurança não é mais uma opção, mas uma necessidade para qualquer empresa ou organização moderna. A GOS oferece soluções avançadas para proteção de dados, infraestruturas críticas e processos digitais. Nosso compromisso é blindar sua operação contra ataques, invasões e fraudes, reduzindo riscos e garantindo a continuidade dos negócios. <br><br>
-                    Com monitoramento contínuo, análise comportamental e políticas adaptáveis, trabalhamos para que a segurança seja parte estratégica do seu crescimento.
-                </p>
-            </section>
-            <section id="threat" class="glass">
-                <h2>Threat Intelligence: Antecipe e Neutralize Ameaças</h2>
-                <p>
-                    Threat Intelligence é a arte de identificar, entender e neutralizar ameaças antes que elas comprometam sua empresa. Utilizando fontes abertas, deep web e dados proprietários, nossa equipe detecta padrões, investiga comportamentos e entrega insights acionáveis.
-                    <br><br>
-                    O resultado: capacidade de resposta rápida, redução de impactos e postura proativa contra adversários digitais cada vez mais sofisticados.
-                </p>
-            </section>
-            <section id="services" class="glass">
-                <h2>Serviços GOS</h2>
-                <ul>
-                    <li>Monitoramento SOC 24/7 e resposta a incidentes</li>
-                    <li>Threat Intelligence as a Service</li>
-                    <li>Testes de intrusão e Red Team</li>
-                    <li>Gestão de vulnerabilidades e compliance</li>
-                    <li>Consultoria estratégica em cibersegurança</li>
-                </ul>
-                <a href="#contact" class="cta">Solicite uma avaliação</a>
-            </section>
-            <section id="contact" class="glass">
-                <h2>Contato</h2>
-                <p>
-                    Pronto para levar sua segurança ao próximo nível?<br>
-                    <b>Email:</b> contato@gos-cyber.com<br>
-                    <b>LinkedIn:</b> linkedin.com/company/gos-cyber
-                </p>
-            </section>
-        </main>
-    </div>
-    <footer>
-        © 2025 GOS - Governance of Cyber Systems. &nbsp; | &nbsp; Seu parceiro estratégico em cibersegurança.<br>
-        <span style="font-size:1.5em;letter-spacing:2px;color:#57d6ff;">&#9679; &#11088; &#9679;</span>
-    </footer>
+  <header>
+    <!-- Corvo cibernético pousado sobre GOS (exemplo simples, troque pelo SVG do seu corvo) -->
+    <svg class="cybercrow-logo" viewBox="0 0 110 80">
+      <text x="12" y="77" font-family="Orbitron, Arial, sans-serif" font-size="35" font-weight="bold" fill="#40b0f7">GOS</text>
+      <g>
+        <ellipse cx="48" cy="38" rx="14" ry="7" fill="#182642" stroke="#40b0f7" stroke-width="1.3"/>
+        <ellipse cx="41" cy="22" rx="6" ry="11" fill="#233049" stroke="#40b0f7" stroke-width="1"/>
+        <ellipse cx="44" cy="16" rx="2.2" ry="4.2" fill="#203042"/>
+        <ellipse cx="47" cy="26" rx="2.8" ry="2.8" fill="#40b0f7" />
+        <polygon points="36,19 40,19 38,22" fill="#a3eaff" stroke="#40b0f7" stroke-width="0.2"/>
+      </g>
+    </svg>
+    <div class="gos-title">Governance of Cyber Systems</div>
+    <nav>
+      <a href="#sobre">Sobre</a>
+      <a href="#cyber">Cibersegurança</a>
+      <a href="#threat">Threat Intelligence</a>
+      <a href="#servicos">Serviços</a>
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>
+
+  <section class="section" id="sobre">
+    <h2>Bem-vindo à GOS</h2>
+    <p>
+      A GOS - Governance of Cyber Systems é uma empresa dedicada a proteger, monitorar e impulsionar ambientes digitais com inovação, ética e inteligência. Atuando com foco em cibersegurança e análise avançada de ameaças, oferecemos soluções personalizadas para empresas que exigem confiança e alto padrão de governança digital.
+    </p>
+  </section>
+
+  <section class="section" id="cyber">
+    <h2>Cibersegurança: Segurança que gera confiança</h2>
+    <p>
+      Em um cenário cada vez mais digital, proteger informações e ativos tornou-se indispensável. Nossa abordagem une monitoramento proativo, políticas robustas e tecnologia de ponta para identificar e neutralizar ameaças antes que causem impacto. Com a GOS, a segurança não é apenas uma proteção, mas um diferencial estratégico para o seu negócio.
+    </p>
+  </section>
+
+  <section class="section" id="threat">
+    <h2>Threat Intelligence: Antecipe o futuro das ameaças</h2>
+    <p>
+      Utilizando inteligência de ameaças, a GOS analisa dados globais e comportamentos suspeitos para detectar padrões, prever riscos e responder rapidamente a ataques. Nossa equipe entrega insights acionáveis, possibilitando decisões estratégicas, respostas rápidas e postura proativa contra agentes maliciosos em constante evolução.
+    </p>
+  </section>
+
+  <section class="section" id="servicos">
+    <h2>Serviços</h2>
+    <ul>
+      <li>Monitoramento de Segurança 24x7</li>
+      <li>Análise e Gestão de Vulnerabilidades</li>
+      <li>Threat Intelligence e Resposta a Incidentes</li>
+      <li>Testes de Intrusão e Simulação de Ataques</li>
+      <li>Consultoria em Governança e Compliance</li>
+    </ul>
+    <a href="#contato" class="cta">Fale com a GOS</a>
+  </section>
+
+  <section class="section" id="contato">
+    <h2>Contato</h2>
+    <p>
+      Pronto para elevar a segurança digital da sua empresa?<br>
+      <b>Email:</b> contato@gos-cyber.com<br>
+      <b>LinkedIn:</b> linkedin.com/company/gos-cyber
+    </p>
+  </section>
+
+  <footer>
+    © 2025 GOS - Governance of Cyber Systems | Todos os direitos reservados.
+  </footer>
 </body>
 </html>
