--- a/index.html
+++ b/index.html
@@ -7,136 +7,144 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg1: #101828;
-      --bg2: #182642;
-      --accent: #40b0f7;
-      --text: #eaf1fa;
-      --glass: rgba(30, 47, 91, 0.85);
-      --card-shadow: 0 4px 32px rgba(0,0,0,0.15);
+      --primary: #18191f;
+      --secondary: #f5f7fa;
+      --accent: #14b8a6;
+      --neutral: #777;
     }
     html, body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      color: var(--text);
       font-family: 'Montserrat', Arial, sans-serif;
+      background: var(--secondary);
+      color: var(--primary);
+      scroll-behavior: smooth;
     }
     header {
-      background: var(--bg2);
+      background: #fff;
+      padding: 64px 0 40px 0;
       text-align: center;
-      padding: 60px 12px 32px 12px;
       position: relative;
-      overflow: hidden;
+      box-shadow: 0 8px 28px -10px #d7dbe6;
     }
-    .cybercrow-logo {
-      display: block;
-      margin: 0 auto -28px auto;
-      width: 140px;
-      /* Exemplo SVG minimalista, troque depois pelo SVG do seu corvo */
+    .logo-row {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 22px;
+      margin-bottom: 22px;
+    }
+    .cybercrow-svg {
+      height: 68px;
+      width: auto;
     }
     .gos-title {
       font-family: 'Orbitron', Arial, sans-serif;
-      font-size: 2.8rem;
-      color: var(--accent);
-      letter-spacing: 3px;
+      font-size: 2.4rem;
+      color: var(--primary);
       font-weight: 700;
-      text-shadow: 0 2px 20px #34c7ff44;
+      letter-spacing: 2.5px;
     }
     nav {
-      margin-top: 20px;
+      margin: 32px 0 0 0;
     }
     nav a {
-      color: var(--accent);
+      color: var(--neutral);
       text-decoration: none;
       margin: 0 18px;
       font-weight: 700;
-      font-size: 1.08rem;
-      letter-spacing: 1px;
-      padding-bottom: 2px;
+      font-size: 1.05rem;
+      padding: 7px 0;
       border-bottom: 2px solid transparent;
-      transition: border .2s, color .2s;
+      transition: color .15s, border .15s;
     }
     nav a:hover {
-      border-bottom: 2px solid var(--accent);
-      color: #fff;
-    }
-    .section {
-      max-width: 900px;
-      margin: 54px auto;
-      padding: 38px 24px;
-      background: var(--glass);
-      border-radius: 22px;
-      box-shadow: var(--card-shadow);
-      text-align: center;
-    }
-    .section h2 {
       color: var(--accent);
+      border-bottom: 2px solid var(--accent);
+    }
+    section {
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 80px 28px;
+      background: #fff;
+      border-radius: 30px;
+      box-shadow: 0 4px 32px rgba(30,36,61,.09);
+      margin-top: 50px;
+    }
+    section:not(:first-of-type) {
+      margin-top: 35px;
+    }
+    h2 {
       font-family: 'Orbitron', Arial, sans-serif;
-      font-size: 1.5rem;
-      margin-bottom: 18px;
-      letter-spacing: 1px;
+      color: var(--accent);
+      font-size: 2rem;
+      margin-bottom: 24px;
+      letter-spacing: 1.5px;
     }
-    .section p, .section ul {
-      font-size: 1.07rem;
-      margin: 12px 0 0 0;
+    .subtitle {
+      color: var(--neutral);
+      font-size: 1.13rem;
+      margin-top: -18px;
+      margin-bottom: 34px;
+    }
+    p, ul {
+      color: var(--primary);
+      font-size: 1.15rem;
       line-height: 1.7;
-      color: #eaf1fa;
+      margin-bottom: 16px;
     }
-    .section ul {
+    ul {
+      padding-left: 22px;
       text-align: left;
-      display: inline-block;
-      margin: 24px auto 0 auto;
-      padding-left: 18px;
     }
-    .cta {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 40px;
-      font-size: 1.07rem;
+    .cta-btn {
+      margin-top: 36px;
       background: var(--accent);
-      color: var(--bg1);
-      border-radius: 14px;
+      color: #fff;
       font-weight: bold;
+      font-size: 1.11rem;
+      padding: 16px 50px;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 18px #14b8a644;
       text-decoration: none;
       letter-spacing: 1px;
-      box-shadow: 0 2px 12px #0af2fd28;
-      transition: background .22s, color .22s;
+      transition: background .18s;
+      cursor: pointer;
+      display: inline-block;
     }
-    .cta:hover {
-      background: #fff;
-      color: var(--accent);
+    .cta-btn:hover {
+      background: #0d9488;
     }
     footer {
-      margin-top: 46px;
+      margin-top: 72px;
       text-align: center;
-      padding: 28px 0 10px 0;
-      font-size: 1.02rem;
-      color: #8ebee7;
-      background: var(--bg2);
-      border-radius: 16px 16px 0 0;
-      box-shadow: 0 -2px 18px #1e2f5bb0;
+      color: #a6a6aa;
+      font-size: 1.03rem;
+      padding: 38px 0 20px 0;
+      background: none;
+      letter-spacing: 1.2px;
     }
     @media (max-width: 700px) {
-      .section {padding: 20px 6vw;}
-      .gos-title {font-size: 1.7rem;}
-      header {padding: 40px 2vw 22px 2vw;}
+      section { padding: 40px 4vw; }
+      .gos-title { font-size: 1.28rem; }
+      header { padding: 40px 0 26px 0; }
     }
   </style>
 </head>
 <body>
   <header>
-    <!-- Corvo cibernético pousado sobre GOS (exemplo simples, troque pelo SVG do seu corvo) -->
-    <svg class="cybercrow-logo" viewBox="0 0 110 80">
-      <text x="12" y="77" font-family="Orbitron, Arial, sans-serif" font-size="35" font-weight="bold" fill="#40b0f7">GOS</text>
-      <g>
-        <ellipse cx="48" cy="38" rx="14" ry="7" fill="#182642" stroke="#40b0f7" stroke-width="1.3"/>
-        <ellipse cx="41" cy="22" rx="6" ry="11" fill="#233049" stroke="#40b0f7" stroke-width="1"/>
-        <ellipse cx="44" cy="16" rx="2.2" ry="4.2" fill="#203042"/>
-        <ellipse cx="47" cy="26" rx="2.8" ry="2.8" fill="#40b0f7" />
-        <polygon points="36,19 40,19 38,22" fill="#a3eaff" stroke="#40b0f7" stroke-width="0.2"/>
-      </g>
-    </svg>
-    <div class="gos-title">Governance of Cyber Systems</div>
+    <div class="logo-row">
+      <!-- Cyber crow (substitua pelo SVG da sua identidade visual se quiser) -->
+      <svg class="cybercrow-svg" viewBox="0 0 80 60">
+        <ellipse cx="40" cy="33" rx="20" ry="12" fill="#e4eaf3" stroke="#14b8a6" stroke-width="2"/>
+        <ellipse cx="27" cy="17" rx="9" ry="15" fill="#e4eaf3" stroke="#14b8a6" stroke-width="2"/>
+        <ellipse cx="32" cy="10" rx="3.3" ry="6" fill="#b1ded8"/>
+        <ellipse cx="38" cy="20" rx="3.5" ry="3.5" fill="#14b8a6" />
+        <polygon points="15,21 23,21 19,26" fill="#14b8a6"/>
+      </svg>
+      <div class="gos-title">GOS<br>Governance of Cyber Systems</div>
+    </div>
     <nav>
       <a href="#sobre">Sobre</a>
       <a href="#cyber">Cibersegurança</a>
@@ -146,50 +154,54 @@
     </nav>
   </header>
 
-  <section class="section" id="sobre">
+  <section id="sobre">
     <h2>Bem-vindo à GOS</h2>
+    <div class="subtitle">Excelência em proteção digital e inteligência contra ameaças.</div>
     <p>
-      A GOS - Governance of Cyber Systems é uma empresa dedicada a proteger, monitorar e impulsionar ambientes digitais com inovação, ética e inteligência. Atuando com foco em cibersegurança e análise avançada de ameaças, oferecemos soluções personalizadas para empresas que exigem confiança e alto padrão de governança digital.
+      A GOS - Governance of Cyber Systems nasceu para oferecer soluções sofisticadas em cibersegurança e inteligência digital. Nosso símbolo, o corvo cibernético, representa vigilância, estratégia e adaptação, qualidades essenciais para proteger ambientes corporativos em um mundo hiperconectado.
     </p>
   </section>
 
-  <section class="section" id="cyber">
-    <h2>Cibersegurança: Segurança que gera confiança</h2>
+  <section id="cyber">
+    <h2>Cibersegurança</h2>
+    <div class="subtitle">Confiança e robustez para empresas do presente e do futuro.</div>
     <p>
-      Em um cenário cada vez mais digital, proteger informações e ativos tornou-se indispensável. Nossa abordagem une monitoramento proativo, políticas robustas e tecnologia de ponta para identificar e neutralizar ameaças antes que causem impacto. Com a GOS, a segurança não é apenas uma proteção, mas um diferencial estratégico para o seu negócio.
+      Segurança digital não é apenas tecnologia, mas um compromisso estratégico com a proteção de dados e ativos críticos. Apoiamos nossos clientes com políticas avançadas, monitoramento contínuo e resposta ágil a incidentes. Com a GOS, sua organização estará sempre um passo à frente de ameaças, vazamentos e riscos digitais.
     </p>
   </section>
 
-  <section class="section" id="threat">
-    <h2>Threat Intelligence: Antecipe o futuro das ameaças</h2>
+  <section id="threat">
+    <h2>Threat Intelligence</h2>
+    <div class="subtitle">Antecipe riscos, neutralize ataques e fortaleça sua defesa.</div>
     <p>
-      Utilizando inteligência de ameaças, a GOS analisa dados globais e comportamentos suspeitos para detectar padrões, prever riscos e responder rapidamente a ataques. Nossa equipe entrega insights acionáveis, possibilitando decisões estratégicas, respostas rápidas e postura proativa contra agentes maliciosos em constante evolução.
+      A inteligência de ameaças permite identificar padrões maliciosos, analisar comportamentos e gerar insights acionáveis para prevenir ataques. Nossos especialistas monitoram fontes abertas, deep web e ambientes internos, entregando relatórios claros e ações práticas para garantir a segurança total do seu ambiente digital.
     </p>
   </section>
 
-  <section class="section" id="servicos">
+  <section id="servicos">
     <h2>Serviços</h2>
     <ul>
-      <li>Monitoramento de Segurança 24x7</li>
-      <li>Análise e Gestão de Vulnerabilidades</li>
-      <li>Threat Intelligence e Resposta a Incidentes</li>
-      <li>Testes de Intrusão e Simulação de Ataques</li>
-      <li>Consultoria em Governança e Compliance</li>
+      <li>Monitoramento SOC 24/7</li>
+      <li>Threat Intelligence as a Service</li>
+      <li>Resposta a incidentes e análise forense</li>
+      <li>Testes de intrusão e Red Team</li>
+      <li>Gestão de vulnerabilidades e compliance</li>
+      <li>Consultoria estratégica em cibersegurança</li>
     </ul>
-    <a href="#contato" class="cta">Fale com a GOS</a>
+    <a href="#contato" class="cta-btn">Quero saber mais</a>
   </section>
 
-  <section class="section" id="contato">
+  <section id="contato">
     <h2>Contato</h2>
+    <div class="subtitle">Converse com nossos especialistas e transforme a segurança do seu negócio.</div>
     <p>
-      Pronto para elevar a segurança digital da sua empresa?<br>
       <b>Email:</b> contato@gos-cyber.com<br>
       <b>LinkedIn:</b> linkedin.com/company/gos-cyber
     </p>
   </section>
 
   <footer>
-    © 2025 GOS - Governance of Cyber Systems | Todos os direitos reservados.
+    © 2025 GOS - Governance of Cyber Systems &nbsp;|&nbsp; Todos os direitos reservados.
   </footer>
 </body>
 </html>
