--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberShield | Advanced Cyber Security Solutions</title>
+    <title> GOS | Advanced Cyber Security Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -87,7 +87,7 @@
                 <div class="hexagon w-10 h-10 bg-blue-500 flex items-center justify-center glow-effect">
                     <i class="fas fa-shield-alt text-white text-xl"></i>
                 </div>
-                <span class="text-2xl font-bold gradient-text">CyberShield</span>
+                <span class="text-2xl font-bold gradient-text">GOS</span>
             </div>
             
             <div class="hidden md:flex space-x-8">
@@ -141,7 +141,7 @@
                         <img src="https://randomuser.me/api/portraits/women/68.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
                     </div>
                     <div>
-                        <p class="text-sm text-gray-400">Trusted by 500+ companies worldwide</p>
+                        <p class="text-sm text-gray-400">BR Solution</p>
                         <div class="flex space-x-1 text-yellow-400">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -157,7 +157,7 @@
             <div class="md:w-1/2 relative">
                 <div class="cyber-card rounded-xl p-6 max-w-md mx-auto">
                     <div class="terminal-code p-4 mb-6 rounded">
-                        <p class="text-green-400">$ cyber-shield scan --threat-level=high</p>
+                        <p class="text-green-400">$ gos-cyber scan --threat-level=high</p>
                         <p class="text-gray-300 mt-2">> Initializing security protocols...</p>
                         <p class="text-gray-300">> Analyzing network vulnerabilities...</p>
                         <p class="text-blue-400">> Detected 0 critical threats</p>
@@ -441,7 +441,7 @@
                 <div class="lg:w-1/2 mb-12 lg:mb-0 lg:pr-12">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6">About <span class="gradient-text">CyberShield</span></h2>
                     <p class="text-gray-400 mb-6">
-                        Founded in 2015 by a team of cybersecurity veterans, CyberShield has grown to become a trusted partner for organizations 
+                        Founded in 2023 by a team of cybersecurity veterans, GOS has grown to become a trusted partner for organizations 
                         seeking to protect their digital assets from evolving threats.
                     </p>
                     <p class="text-gray-400 mb-8">
