--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="#services" class="hover:text-blue-400 transition">Services</a>
                 <a href="#about" class="hover:text-blue-400 transition">About</a>
                 <a href="#contact" class="hover:text-blue-400 transition">Contact</a>
-                <a href="#" class="px-4 py-2 rounded-md bg-gradient-to-r from-blue-600 to-emerald-500 hover:from-blue-500 hover:to-emerald-400 transition text-white font-medium text-center">Get Protected</a>
+                <a href="#" class="px-4 py-2 rounded-md bg-gradient-to-r from-blue-600 to-emerald-500 hover:from-blue-500 hover:to-emerald-400 transition text-white font-medium text-center">Call GOS</a>
             </div>
         </div>
     </header>
@@ -136,9 +136,9 @@
                 
                 <div class="mt-12 flex items-center space-x-6">
                     <div class="flex -space-x-2">
-                        <img src="https://randomuser.me/api/portraits/women/44.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
-                        <img src="https://randomuser.me/api/portraits/women/68.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
+                        <img src="https://randomuser.me/api/portraits/lego/7.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
+                        <img src="https://randomuser.me/api/portraits/lego/7.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
+                        <img src="https://randomuser.me/api/portraits/lego/7.jpg" class="w-10 h-10 rounded-full border-2 border-blue-500" alt="Client">
                     </div>
                     <div>
                         <p class="text-sm text-gray-400">BR Solution</p>
@@ -439,7 +439,7 @@
         <div class="container mx-auto">
             <div class="flex flex-col lg:flex-row items-center">
                 <div class="lg:w-1/2 mb-12 lg:mb-0 lg:pr-12">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-6">About <span class="gradient-text">CyberShield</span></h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-6">About <span class="gradient-text">GOS</span></h2>
                     <p class="text-gray-400 mb-6">
                         Founded in 2023 by a team of cybersecurity veterans, GOS has grown to become a trusted partner for organizations 
                         seeking to protect their digital assets from evolving threats.
@@ -447,6 +447,10 @@
                     <p class="text-gray-400 mb-8">
                         Our mission is to deliver innovative, effective security solutions that adapt to the changing threat landscape, 
                         enabling our clients to focus on their core business with confidence.
+                    </p>
+                      <p class="text-gray-400 mb-8">
+                        email: gos@gos.dev.br
+                        linkedIn: GOS-cyber
                     </p>
                     
                     <div class="grid grid-cols-2 gap-6">
